--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -7,5 +7,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
-    - name: vuepress-deploy
+    - name: Install dependencies
+      run: npm i
+
+    - name: compile and deploy
       run: bash ./deploy.sh
