--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -1,7 +1,8 @@
 name: Build and Deploy
 on: [push]
 jobs:
-  build-and-deploy:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -10,5 +11,20 @@ jobs:
     - name: Install dependencies
       run: npm i
 
-    - name: compile and deploy
-      run: bash ./deploy.sh
+    - name: Compile
+      run: npm run docs:build
+
+  # Deployment job
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
