--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -8,23 +8,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
-    - name: Install dependencies
-      run: npm i
-
-    - name: Compile
-      run: npm run docs:build
-
-  # Deployment job
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+    - name: vuepress-deploy
+        uses: jenkey2011/vuepress-deploy@master
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          TARGET_REPO: Chef5/const-weapp
+          TARGET_BRANCH: main
+          BUILD_SCRIPT: npm i && npm run docs:build
+          BUILD_DIR: src/.vuepress/dist/
