--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -15,4 +15,4 @@ jobs:
         TARGET_REPO: Chef5/const-weapp
         TARGET_BRANCH: main
         BUILD_SCRIPT: npm i && npm run docs:build
-        BUILD_DIR: src/.vuepress/dist/
+        BUILD_DIR: src/.vuepress/dist
