--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -14,5 +14,5 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         TARGET_REPO: Chef5/const-weapp
         TARGET_BRANCH: main
-        BUILD_SCRIPT: npm i && npm run docs:build
+        BUILD_SCRIPT: git config --global --add safe.directory "*" && npm i && npm run docs:build
         BUILD_DIR: src/.vuepress/dist
